--- a/tugaslanjutan/templates/form.html
+++ b/tugaslanjutan/templates/form.html
@@ -26,7 +26,8 @@
 				v_data =
 				{
 					"username": $("#username").val(),
-					"password": $("#password").val()
+					"password": $("#password").val(),
+					"key" 	  : $("#key").val()
 				};
 
 				$.ajax({
@@ -337,6 +338,13 @@
 									v-bind:class="{'form-control':true, 'is-invalid' : !validPassword(password) && passwordBlured}"
 									v-on:blur="passwordBlured = true">
 								<div class="invalid-feedback">Password must be 8 character!</div>
+							</div>
+							<div class="forms-inputs mb-4"> <span>key</span>
+								<input autocomplete="off" name="key" id="key" type="password"
+									required v-model="password"
+									v-bind:class="{'form-control':true, 'is-invalid' : !validPassword(password) && passwordBlured}"
+									v-on:blur="passwordBlured = true">
+								<div class="invalid-feedback">masukkan key</div>
 							</div>
 							<div class="mb-3"> <button v-on:click.stop.prevent="submit" id="btn_login"
 									class="btn btn-dark w-100" >Login</button> </div>
