add shift ,rsa,subti and done

--- a/tugaslanjutan/templates/form.html
+++ b/tugaslanjutan/templates/form.html
@@ -155,6 +155,7 @@
 			$("#parralax").show();
 			$("#view_login").hide();
 			$("#register").hide();
+			$('#card_user').hide()
 		}
 		}
 
@@ -242,8 +243,6 @@
 							{ data: 'id' },
 							{ data: 'name' },
 							{ data: 'price' },
-
-
 						]
 					});
 
@@ -471,7 +470,7 @@
 			<br>
 			<hr>
 			<br>
-			<div style="float: rigth;margin-left: 50;">
+			<!-- <div style="float: rigth;margin-left: 50;" id="card_title">
 				<input type="button" style="width: 180px;" class="btn btn-lg btn-primary btn-block" id="btn_get_id"
 					value="Show Profile" onclick='getUser()'> </input>
 				<br>
@@ -488,7 +487,7 @@
 					</div>
 				</div>
 
-			</div>
+			</div> -->
 		</div>
 	</div>
 </body>
